# synaptex

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
crates/synaptex-app/: Cargo.toml  Dioxus.toml
crates/synaptex-app/src/: api.rs  main.rs  smartconfig.rs
crates/synaptex-app/src/views/: devices.rs  mod.rs  pairing.rs  settings.rs
crates/synaptex-bond/: Cargo.toml
crates/synaptex-bond/src/: client.rs  discovery.rs  lib.rs  plugin.rs  types.rs
crates/synaptex-cli/: Cargo.toml
crates/synaptex-cli/src/: main.rs
crates/synaptex-cli/src/commands/: config.rs  device.rs  hub.rs  mod.rs  room.rs  router.rs  routine.rs
crates/synaptex-core/: Cargo.toml
crates/synaptex-core/src/: bond_sync.rs  bus.rs  main.rs  mysa_sync.rs  room.rs  router_client.rs
crates/synaptex-core/src/cache/: mod.rs
crates/synaptex-core/src/db/: mod.rs  trees.rs
crates/synaptex-core/src/group/: mod.rs
crates/synaptex-core/src/plugin/: mod.rs  registry.rs
crates/synaptex-core/src/rest/: auth.rs  dto.rs  error.rs  mod.rs
crates/synaptex-core/src/rest/handlers/: config.rs  devices.rs  events.rs  groups.rs  hubs.rs  mod.rs  pairing.rs  rooms.rs  router.rs  routines.rs
crates/synaptex-core/src/routine/: mod.rs
crates/synaptex-core/src/rpc/: convert.rs  mod.rs  server.rs
crates/synaptex-core/src/tuya_cloud/: discovery.rs  mod.rs
crates/synaptex-mysa/: Cargo.toml
crates/synaptex-mysa/src/: auth.rs  client.rs  discovery.rs  lib.rs  mqtt.rs  plugin.rs  sigv4.rs  types.rs
crates/synaptex-proto/: Cargo.toml  build.rs
crates/synaptex-proto/src/: lib.rs
crates/synaptex-router/: Cargo.toml
crates/synaptex-router-proto/: Cargo.toml  build.rs
crates/synaptex-router-proto/proto/: router.proto
crates/synaptex-router-proto/src/: lib.rs
crates/synaptex-router/src/: db.rs  dhcp.rs  discovery.rs  firewall.rs  kea.rs  main.rs  tls.rs
crates/synaptex-router/src/rpc/: mod.rs
crates/synaptex-tuya/: Cargo.toml
crates/synaptex-tuya/src/: cipher.rs  config.rs  dp_map.rs  error.rs  lib.rs  plugin.rs  protocol.rs
crates/synaptex-types/: Cargo.toml
crates/synaptex-types/src/: capability.rs  device.rs  lib.rs  plugin.rs
flake/nixosModules/: example.nix  synaptex-core.nix  synaptex-router.nix
perSystem/: devShells.nix  formatter.nix  packages.nix
proto/: synaptex.proto
src/kea-hook/: CMakeLists.txt
src/kea-hook/src/: synaptex_hook.cc
