[package]
name    = "synaptex-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dioxus     = { version = "=0.7.4", features = ["mobile"] }
reqwest    = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
