[package]
name    = "synaptex-bond"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
synaptex-types = { workspace = true }

tokio       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
sha2        = { workspace = true }
