[package]
name    = "synaptex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "synaptex-cli"
path = "src/main.rs"

[dependencies]
tokio      = { workspace = true }
clap       = { workspace = true }
anyhow     = { workspace = true }
reqwest    = { workspace = true }
serde_json = { workspace = true }
