[package]
name    = "synaptex-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "synaptex-core"
path = "src/main.rs"

[dependencies]
synaptex-types        = { workspace = true }
synaptex-tuya         = { workspace = true }
synaptex-bond         = { workspace = true }
synaptex-mysa         = { workspace = true }
synaptex-router-proto = { workspace = true }
tonic              = { workspace = true }

tokio              = { workspace = true }
tokio-stream       = { workspace = true }
async-trait        = { workspace = true }
postcard           = { workspace = true }
serde              = { workspace = true }
sled               = { workspace = true }
dashmap            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
bytes              = { workspace = true }
clap               = { workspace = true }
rand               = { workspace = true }
uuid               = { version = "1", features = ["v4"] }
axum               = { workspace = true }
tower-http         = { workspace = true }
reqwest            = { workspace = true }
serde_json         = { workspace = true }
hmac               = { workspace = true }
sha2               = { workspace = true }
md-5               = { workspace = true }
hex                = { workspace = true }
aes                = { workspace = true }
aes-gcm            = { workspace = true }
socket2            = { workspace = true }
cron               = { workspace = true }
chrono             = { workspace = true }
