[package]
name    = "synaptex-mysa"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
synaptex-types = { workspace = true }

tokio       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
sha2        = { workspace = true }
hmac        = { workspace = true }
rand        = { workspace = true }
dashmap     = { workspace = true }
hex         = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }

tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
num-bigint        = "0.4"
num-traits        = "0.2"
hkdf              = "0.12"
urlencoding       = "2.1"
base64            = "0.22"
futures           = "0.3"
