[package]
name    = "synaptex-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "synaptex-router"
path = "src/main.rs"

[dependencies]
synaptex-router-proto = { workspace = true }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
rcgen        = { workspace = true }
clap         = { workspace = true }
futures-core = "0.3"
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
aes          = { workspace = true }
aes-gcm      = { workspace = true }
md-5         = { workspace = true }
hex          = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
socket2      = { workspace = true }
