[package]
name    = "synaptex-tuya"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
synaptex-types = { workspace = true }

tokio       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
bytes       = { workspace = true }
hex         = { workspace = true }
aes         = { workspace = true }
aes-gcm     = { workspace = true }
cipher      = { workspace = true }
crc32fast   = { workspace = true }
hmac        = { workspace = true }
sha2        = { workspace = true }
rand        = { workspace = true }
dashmap     = { workspace = true }
